# Rusty

./: .gitignore  README.md  cleanprojects.ps1
chapter10/largest_generic/: Cargo.toml
chapter10/largest_number/: Cargo.toml
chapter10/lifetimes/: Cargo.toml
chapter10/traits_example/: Cargo.toml
chapter11/adder/: Cargo.toml
chapter11/customMessage/: Cargo.toml
chapter12/minigrep/: Cargo.toml
chapter13/clousureexample/: Cargo.toml
chapter13/iteratorexample/: Cargo.toml
chapter14/adders/: Cargo.toml
chapter14/adders/add-one/: Cargo.toml
chapter14/adders/add-one/src/: lib.rs
chapter14/adders/src/: main.rs
chapter15/boxexample/: Cargo.toml
chapter15/derefexample/: Cargo.toml
chapter15/dropexample/: Cargo.toml
chapter15/rcexample/: Cargo.toml
chapter15/refcellexample/: Cargo.toml
chapter15/weakexample/: Cargo.toml
chapter16/channelsexample/: Cargo.toml
chapter16/sharedstateexample/: Cargo.toml
chapter16/threadexample/: Cargo.toml
chapter17/blog/: Cargo.toml
chapter17/oop-basic/: Cargo.toml
chapter17/polymorhp/: Cargo.toml
chapter18/match-syntax/: Cargo.toml
chapter18/pattterns/: Cargo.toml
chapter18/refitableMatch/: Cargo.toml
chapter19/advancedfunctions/: Cargo.toml
chapter19/advancedtraits/: Cargo.toml
chapter19/advancedtypes/: Cargo.toml
chapter19/unsafeexample/: Cargo.toml
chapter20/web-server/: Cargo.toml
chapter3/controlflow/: Cargo.toml
chapter3/datatypes/: Cargo.toml
chapter3/excercises/: Cargo.toml
first/: Cargo.toml
first/src/: main.rs
guessing_game/: Cargo.toml
hello_world/: Cargo.toml
(+74 files in other folders)
