[package]
name = "adders"
version = "0.1.0"
authors = ["wahur666 <imre.secodi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
add-one = {path = "add-one"}
rand = "0.7.2"

[workspace]
members = [
	".",
	"add-one"
]